Add new triggers

--- a/normanImprovements/localization/english/normanmod_l_english.yml
+++ b/normanImprovements/localization/english/normanmod_l_english.yml
@@ -1,3 +1,4 @@
 ﻿l_english:
- embrace_english_culture_decision_desc:0 "mai q caraio"
  embrace_english_culture_decision_time_passed:0 "Year is at least 1215"
+ embrace_english_culture_decision_time_passed_early:0 "Year is at least 1100"
+ embrace_english_culture_decision_lands_france:0 "Norman nobles hold no lands in France or Aquitaine"
